Add refresh token functionality (#25)
* initial setup for refresh tokens

* resolve cookies succesfully

* fix tests

* Fixed/updated tests

* Working refresh tokens

* fix minor inconveniences

* refactor minor changes
