# src/domain/user/users.controller.ts
@@ -1,17 +1,25 @@
-import { UserAuthenticationRequestDto, UserAuthenticationResponseDto } from './users.types';
-import { Body, Controller, Post, Route, SuccessResponse } from '@tsoa/runtime';
+import { Request as ExpressRequest } from 'express';
+import { RefreshTokenResponseDto, UserAuthenticationRequestDto, UserAuthenticationResponseDto } from './users.types';
+import { Body, Controller, Post, Route, Request } from '@tsoa/runtime';
 import UsersService from './users.service';
 
 @Route('/users')
 export class UsersController extends Controller {
     usersService = new UsersService();
 
-    @SuccessResponse('200', 'Success')
     @Post('/login')
     async authenticate(
         @Body() userAuthenticationRequest: UserAuthenticationRequestDto
     ): Promise<UserAuthenticationResponseDto> {
-        const jwt = await this.usersService.handleUserAuthentication(userAuthenticationRequest);
-        return { jwt };
+        const { accessToken, refreshToken } = await this.usersService.handleUserAuthentication(
+            userAuthenticationRequest
+        );
+        this.setHeader('Set-Cookie', [`refreshToken=${refreshToken}; path=/; HttpOnly`]);
+        return { accessToken };
+    }
+
+    @Post('/refresh-token')
+    async refreshToken(@Request() request: ExpressRequest): Promise<RefreshTokenResponseDto> {
+        return { accessToken: await this.usersService.refreshAccessToken(request.cookies.refreshToken) };
     }
 }
