# src/domain/user/users.service.ts
@@ -6,23 +6,29 @@ import { UserAuthenticationRequestDto } from './users.types';
 import { UserDoesNotExist } from './users.repository.errors';
 import { UserInfoDto } from './users.types';
 import UsersRepository from './users.repository';
+import { InvalidJwt } from '../../external/jwt-manager/jwt-manager.errors';
 
 class UsersService {
     facebookClient = new FacebookClient();
     usersRepository = new UsersRepository();
     jwtManager = new JwtManager();
 
-    async handleUserAuthentication(userAuthenticationRequest: UserAuthenticationRequestDto): Promise<string> {
+    async handleUserAuthentication(
+        userAuthenticationRequest: UserAuthenticationRequestDto
+    ): Promise<{ accessToken: string; refreshToken: string }> {
         try {
-            await this.facebookClient.validateAccessToken(userAuthenticationRequest.accessToken);
-            const userInfo = await this.facebookClient.getUserDetails(userAuthenticationRequest.accessToken);
+            await this.facebookClient.validateAccessToken(userAuthenticationRequest.facebookAccessToken);
+            const userInfo = await this.facebookClient.getUserDetails(userAuthenticationRequest.facebookAccessToken);
             await this.createOrUpdateUser(userInfo);
             const { email, role } = await this.usersRepository.getUser(userInfo.email);
 
-            return this.jwtManager.generateJwt({ email, role });
+            return {
+                accessToken: this.jwtManager.generateAccessToken({ email, role }),
+                refreshToken: this.jwtManager.generateRefreshToken({ email }),
+            };
         } catch (error) {
             if (error instanceof InvalidFacebookAccessToken) {
-                throw new UnauthorizedError('Invalid facebook access token');
+                throw new UnauthorizedError(`Invalid facebook access token: ${error.message}`);
             }
             throw error;
         }
@@ -43,6 +49,19 @@ class UsersService {
         } catch (error) {
             if (error instanceof UserDoesNotExist) {
                 return false;
+            }
+            throw error;
+        }
+    }
+
+    async refreshAccessToken(refreshToken: string): Promise<string> {
+        try {
+            const { email } = await this.jwtManager.decodeRefreshToken(refreshToken);
+            const { role } = await this.usersRepository.getUser(email as string);
+            return this.jwtManager.generateAccessToken({ email, role });
+        } catch (error) {
+            if (error instanceof InvalidJwt) {
+                throw new UnauthorizedError(`Refresh token has expired: ${error.message}`);
             }
             throw error;
         }
