# src/routes-build/swagger.json
@@ -55,18 +55,6 @@
 			},
 			"UserAuthenticationResponseDto": {
 				"properties": {
-					"jwt": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"jwt"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"UserAuthenticationRequestDto": {
-				"properties": {
 					"accessToken": {
 						"type": "string"
 					}
@@ -76,6 +64,21 @@
 				],
 				"type": "object",
 				"additionalProperties": false
+			},
+			"UserAuthenticationRequestDto": {
+				"properties": {
+					"facebookAccessToken": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"facebookAccessToken"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"RefreshTokenResponseDto": {
+				"$ref": "#/components/schemas/UserAuthenticationResponseDto"
 			}
 		},
 		"securitySchemes": {}
@@ -141,7 +144,7 @@
 				"operationId": "Authenticate",
 				"responses": {
 					"200": {
-						"description": "Success",
+						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
@@ -163,6 +166,25 @@
 						}
 					}
 				}
+			}
+		},
+		"/users/refresh-token": {
+			"post": {
+				"operationId": "RefreshToken",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/RefreshTokenResponseDto"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
